<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".Quiz">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher_foreground"
            android:id="@+id/prev_icon">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_previous"
            android:textColor="@color/green"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/prev_icon">
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvQuestionNumber"
                android:id="@+id/question_number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_bar"
                android:id="@+id/score_separator"
                android:layout_toRightOf="@id/question_number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_questions"
                android:id="@+id/total_questions"
                android:layout_toRightOf="@id/score_separator"
                />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/question_info"
            />
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/light_green"
            app:cardCornerRadius="20dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_option1"
                android:id="@+id/option1">
            </RadioButton>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="20dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_option2"
                android:id="@+id/option2">
            </RadioButton>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="20dp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_option3"
                android:id="@+id/option3">
            </RadioButton>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="20dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Option4"
                android:id="@+id/option4">
            </RadioButton>
        </androidx.cardview.widget.CardView>

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="70dp"
        android:layout_height="wrap_content"
        >

        <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/green"
        android:text="@string/next">

        </Button>

    </LinearLayout>



</LinearLayout>